opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/zstandard"
bug-reports: "https://github.com/janestreet/zstandard/issues"
dev-repo: "git+https://github.com/janestreet/zstandard.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/zstandard/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.08.0"}
  "core"
  "core_kernel"
  "ppx_jane"
  "conf-zstd"
  "ctypes"      {>= "0.18.0"}
  "dune"        {>= "2.0.0"}
]
synopsis: "OCaml bindings to Zstandard"
description: "
Zstandard is a real-time compression algorithm which provides high compression ratios.
"
available: (arch = "x86_64" | arch = "arm64") & os = "linux"
