(library (name zstandard) (public_name zstandard) (c_names zstd_stubs)
 (c_flags (:standard \ -Werror -pedantic -Wall -Wunused) -w)
 (c_library_flags :standard -lzstd)
 (libraries core core_kernel.iobuf zstd_bindings ctypes.stubs ctypes)
 (preprocess (pps ppx_jane)))

(rule (targets zstd_generated.ml zstd_stubs.c)
 (deps (:first_dep ../gen/zstd_gen.exe)) (action (bash ./%{first_dep})))

(rule
 (targets explicit_dependencies_unignored.ml
  explicit_dependencies_unignored.mli)
 (mode fallback) (deps %{workspace_root}/bin/gen-explicit-dependencies.sh)
 (action
  (bash
   "%{deps} zstd_c; for ext in ml mli; do mv explicit_dependencies{,_unignored}.$ext; done")))