(library
 (foreign_stubs
  (language c)
  (names zstd_stubs)
  (flags
   (:standard \ -Werror -pedantic -Wall -Wunused)
   -w))
 (name zstandard)
 (public_name zstandard)
 (c_library_flags :standard -lzstd)
 (libraries core core_kernel.iobuf zstd_bindings ctypes.stubs ctypes integers)
 (preprocess
  (pps ppx_jane)))

(rule
 (targets zstd_generated.ml zstd_stubs.c)
 (deps
  (:first_dep ../gen/zstd_gen.exe))
 (action
  (bash ./%{first_dep})))
